Switch to java-deptools-native 1.2.0 and Java 22
Closes #104